--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
     "hardhat": "^2.22.9"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "@nomicfoundation/hardhat-web3-v4": "^1.0.0",
+    "@openzeppelin/contracts": "^5.0.2",
+    "@openzeppelin/contracts-upgradeable": "^5.0.2",
+    "@swisstronik/utils": "^1.3.0",
+    "@swisstronik/web3-plugin-swisstronik": "^1.5.1",
+    "dotenv": "^16.4.5",
+    "web3": "^4.13.0"
   }
 }
